
NEWS file for VIFF
==================

This file summarizes the changes between each release. Many more
details can be found in the commit messages:

  http://hg.viff.dk/viff/log/

The issue numbers referenced below refer to the online issue tracker,
please refer to it for details on the issues:

  http://tracker.viff.dk/


Version 0.7.1, released on 2008-10-09
-------------------------------------

A major bug was fixed in the passive multiplication protocol in the
case where 2t + 1 != n. Unit tests were updated for Python 2.6.

* Players would do inconsistent recombination of shares in the passive
  multiplication protocol (Runtime.mul). This resulted in wrong
  answers being computed when 2t + 1 != n.

* Fixed unit tests on Python 2.6. The Bracha broadcast let the players
  send data to themselves by mistake, and for some reason this was not
  detected in earlier Python versions.

* Profiling information (from a run with --profile) is dumped in
  player-X.pstats and player-X.prof files for later analysis.

* Issue 57: Get rid of Runtime._shamir_share. The method was folded
  into Runtime.mul.

* Issue 69: The installation was simplified by including the ConfigObj
  library in the VIFF source. A system-wide installation of ConfigObj
  (if any) will be ignored.


Version 0.7, released on 2008-09-21
-----------------------------------

PyOpenSSL is now used instead of GnuTLS and this enables secure
connections on Windows. The code dealing with starting a player has
been made much more robust and players can now be started in any
order. Players can now also be reliably shutdown. A new runtime based
on homomorphic Paillier encryption supports just two players. Added a
new protocol for equality testing with secret shared result.

* Moved ActiveRuntime and related code to its own module, viff.active.
  This is an incompatible change compared to VIFF 0.6 and you must
  update your code by changing

    from viff.runtime import ActiveRuntime

  to
